--- a/features.html
+++ b/features.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Photosnap Website Challenge</title>
+  <link rel="stylesheet" href="css/all.min.css">  
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Photosnap</title>
 </head>
 <body>
 
@@ -63,6 +63,6 @@
   Get an invite
 
   Copyright 2019. All Rights Reserved
-
+  <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
