--- a/index.html
+++ b/index.html
@@ -38,6 +38,32 @@
       </div>
     </div>
   </nav>
+  <section class="Home bg-black">
+    <div class="row">
+      <div class="col-lg-5 col-md-8 align-self-center homeInfo">
+         <div class="px-md-5 mx-md-5 py-5 py-md-0 px-4 mx-4">
+             <h2 class="text-white text-uppercase">Create and </h2>
+             <h2 class="text-white text-uppercase">share your</h2>
+             <h2 class="text-white text-uppercase mb-4">photo stories.</h2>
+
+             <p class="small text-white-50">Photosnap is a platform for photographers and visual storytellers. We make it easy to share photos, tell stories and connect with others.</p>
+             <p>
+              <button class="secondaryBtnBbg ">Get an Invite</button>
+              <svg xmlns="http://www.w3.org/2000/svg" width="43" height="14" class="ms-2">
+                <g fill="rgba(255, 255, 255, 0.784)" fill-rule="evenodd" stroke="rgba(255, 255, 255, 0.784)"><path d="M0 7h41.864M35.428 1l6 6-6 6"/></g></svg>
+              </p>
+            </div>
+      </div>
+      <div class="col-lg-7 col-md-4 homeImage">
+        <div>
+          <img src="./assets/home/desktop/create-and-share.jpg" alt="createandSharePhoto" class="w-100 imgLarge">
+          <img src="./assets/home/tablet/create-and-share.jpg" alt="createandSharePhoto" class="w-100 imgMedium">
+          <img src="./assets/home/mobile/create-and-share.jpg" alt="createandSharePhoto" class="w-100 imgSmall">
+        </div>
+     </div>
+    </div>
+    
+  </section>
 
 
   <!-- 
