--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
   <section class="Home bg-black">
     <div class="row">
       <div class="col-lg-5 col-md-8 align-self-center homeInfo">
-         <div class="px-md-5 mx-md-5 py-5 py-md-0 px-4 mx-4">
+         <div class="px-md-5 mx-md-5 py-5 py-md-0 px-4 mx-4 position-relative">
              <h2 class="text-white text-uppercase">Create and </h2>
              <h2 class="text-white text-uppercase">share your</h2>
              <h2 class="text-white text-uppercase mb-4">photo stories.</h2>
 
              <p class="small text-white-50">Photosnap is a platform for photographers and visual storytellers. We make it easy to share photos, tell stories and connect with others.</p>
              <p>
-              <button class="secondaryBtnBbg ">Get an Invite</button>
+              <button class="secondaryBtnBbg">Get an Invite</button>
               <svg xmlns="http://www.w3.org/2000/svg" width="43" height="14" class="ms-2">
                 <g fill="rgba(255, 255, 255, 0.784)" fill-rule="evenodd" stroke="rgba(255, 255, 255, 0.784)"><path d="M0 7h41.864M35.428 1l6 6-6 6"/></g></svg>
               </p>
