--- a/index.html
+++ b/index.html
@@ -64,6 +64,31 @@
     </div>
     
   </section>
+  <section class="BeautiulStories bg-white">
+    <div class="row">
+      <div class="col-lg-7 col-md-4 BeautifulImage">
+        <div>
+          <img src="./assets/home/desktop/beautiful-stories.jpg" alt="beatuiflStories" class="w-100 imgLarge">
+          <img src="./assets/home/tablet/beautiful-stories.jpg" alt="beatuiflStories" class="w-100 imgMedium">
+          <img src="./assets/home/mobile/beautiful-stories.jpg" alt="beatuiflStories" class="w-100 imgSmall">
+        </div>
+     </div>
+     <div class="col-lg-5 col-md-8 align-self-center BeautifulInfo">
+      <div class="px-md-5 mx-md-5 py-5 py-md-0 px-4 mx-4 position-relative">
+          <h2 class="text-black text-uppercase">BEAUTIFUL</h2>
+          <h2 class="text-black text-uppercase">stories</h2>
+          <h2 class="text-black text-uppercase mb-4">everyTime</h2>
+          <p class="small text-black-50">We provide design templates to ensure your stories look terrific. Easily add photos, text, embed maps and media from other networks. Then share your story with everyone.</p>
+          <p>
+           <button class="secondaryBtnWbg text-uppercase">View the stories</button>
+           <svg xmlns="http://www.w3.org/2000/svg" width="43" height="14" class="ms-2">
+             <g fill="#000" fill-rule="evenodd" stroke=""><path d="M0 7h41.864M35.428 1l6 6-6 6"/></g></svg>
+           </p>
+       </div>
+   </div>
+    </div>
+    
+  </section>
 
 
   <!-- 
