designed for everyone

--- a/index.html
+++ b/index.html
@@ -82,10 +82,35 @@
           <p>
            <button class="secondaryBtnWbg text-uppercase">View the stories</button>
            <svg xmlns="http://www.w3.org/2000/svg" width="43" height="14" class="ms-2">
-             <g fill="#000" fill-rule="evenodd" stroke=""><path d="M0 7h41.864M35.428 1l6 6-6 6"/></g></svg>
+             <g fill="#000" fill-rule="evenodd" stroke="#000"><path d="M0 7h41.864M35.428 1l6 6-6 6"/></g></svg>
            </p>
        </div>
    </div>
+    </div>
+    
+  </section>
+  <section class=" bg-white">
+    <div class="row">
+      <div class="col-lg-5 col-md-8 align-self-center">
+         <div class="px-md-5 mx-md-5 py-5 py-md-0 px-4 mx-4 position-relative">
+             <h2 class="text-black text-uppercase">designed for </h2>
+             <h2 class="text-black text-uppercase mb-4">everyone</h2>
+
+             <p class="small text-black-50">Photosnap can help you create stories that resonate with your audience.  Our tool is designed for photographers of all levels, brands, businesses you name it. </p>
+             <p>
+              <button class="secondaryBtnWbg text-uppercase">View the stories</button>
+              <svg xmlns="http://www.w3.org/2000/svg" width="43" height="14" class="ms-2">
+                <g fill="#000" fill-rule="evenodd" stroke="#000"><path d="M0 7h41.864M35.428 1l6 6-6 6"/></g></svg>
+              </p>
+            </div>
+      </div>
+      <div class="col-lg-7 col-md-4 designImage">
+        <div>
+          <img src="./assets/home/desktop/designed-for-everyone.jpg" alt="designedFor" class="w-100 imgLarge">
+          <img src="./assets/home/tablet/designed-for-everyone.jpg" alt="designedFor" class="w-100 imgMedium">
+          <img src="./assets/home/mobile/designed-for-everyone.jpg" alt="designedFor" class="w-100 imgSmall">
+        </div>
+     </div>
     </div>
     
   </section>
