--- a/index.html
+++ b/index.html
@@ -114,6 +114,27 @@
     </div>
     
   </section>
+  <section class="storyCards">
+    <div class="row">
+      <div class="col-lg-3 col-md-6">
+         <div class="position-relative cardCaption">
+           <img src="./assets/stories/desktop/mountains.jpg" alt="mountains" class="w-100 imgLarge">
+           <img src="./assets/stories/desktop/mountains.jpg" alt="mountains" class="w-100 imgMedium">
+           <img src="./assets/stories/mobile/mountains.jpg" alt="mountains" class="w-100 imgSmall">
+           <div class="position-absolute cardInfo">
+            <h6 class="text-white">The Mountains</h6>
+            <p class="border-bottom border-7 mb-0 pb-3 small text-white">by John Appleseed</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <button class="secondaryBtnBbg pt-3">Read Story</button>
+              <svg xmlns="http://www.w3.org/2000/svg" width="43" height="14" class="ms-2">
+                <g fill="#fff" fill-rule="evenodd" stroke="#fff"><path d="M0 7h41.864M35.428 1l6 6-6 6"/></g></svg>
+            </div>
+           </div>
+         </div>
+      </div>
+    </div>
+
+  </section>
 
 
   <!-- 
