--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     
   </section>
   <section class="storyCards">
-    <div class="row">
+    <div class="row g-0">
       <div class="col-lg-3 col-md-6">
          <div class="position-relative cardCaption">
            <img src="./assets/stories/desktop/mountains.jpg" alt="mountains" class="w-100 imgLarge">
@@ -132,6 +132,54 @@
            </div>
          </div>
       </div>
+      <div class="col-lg-3 col-md-6">
+        <div class="position-relative cardCaption">
+          <img src="./assets/stories/desktop/cityscapes.jpg" alt="cityscapes" class="w-100 imgLarge">
+          <img src="./assets/stories/desktop/cityscapes.jpg" alt="cityscapes" class="w-100 imgMedium">
+          <img src="./assets/stories/mobile/cityscapes.jpg" alt="cityscapes" class="w-100 imgSmall">
+          <div class="position-absolute cardInfo">
+           <h6 class="text-white">Sunset Cityscapes</h6>
+           <p class="border-bottom border-7 mb-0 pb-3 small text-white">by Benjamin Cruz</p>
+           <div class="d-flex justify-content-between align-items-center">
+             <button class="secondaryBtnBbg pt-3">Read Story</button>
+             <svg xmlns="http://www.w3.org/2000/svg" width="43" height="14" class="ms-2">
+               <g fill="#fff" fill-rule="evenodd" stroke="#fff"><path d="M0 7h41.864M35.428 1l6 6-6 6"/></g></svg>
+           </div>
+          </div>
+        </div>
+     </div>
+     <div class="col-lg-3 col-md-6">
+      <div class="position-relative cardCaption">
+        <img src="./assets/stories/desktop/18-days-voyage.jpg" alt="18-days-voyage" class="w-100 imgLarge">
+        <img src="./assets/stories/desktop/18-days-voyage.jpg" alt="18-days-voyage" class="w-100 imgMedium">
+        <img src="./assets/stories/mobile/18-days-voyage.jpg" alt="18-days-voyage" class="w-100 imgSmall">
+        <div class="position-absolute cardInfo">
+         <h6 class="text-white">18 Days Voyage</h6>
+         <p class="border-bottom border-7 mb-0 pb-3 small text-white">by Alexei Borodin</p>
+         <div class="d-flex justify-content-between align-items-center">
+           <button class="secondaryBtnBbg pt-3">Read Story</button>
+           <svg xmlns="http://www.w3.org/2000/svg" width="43" height="14" class="ms-2">
+             <g fill="#fff" fill-rule="evenodd" stroke="#fff"><path d="M0 7h41.864M35.428 1l6 6-6 6"/></g></svg>
+         </div>
+        </div>
+      </div>
+     </div>
+     <div class="col-lg-3 col-md-6">
+      <div class="position-relative cardCaption">
+        <img src="./assets/stories/desktop/architecturals.jpg" alt="architecturals" class="w-100 imgLarge">
+        <img src="./assets/stories/desktop/architecturals.jpg" alt="architecturals" class="w-100 imgMedium">
+        <img src="./assets/stories/mobile/architecturals.jpg" alt="architecturals" class="w-100 imgSmall">
+        <div class="position-absolute cardInfo">
+         <h6 class="text-white">Architecturals</h6>
+         <p class="border-bottom border-7 mb-0 pb-3 small text-white">by Samantha Brooke</p>
+         <div class="d-flex justify-content-between align-items-center">
+           <button class="secondaryBtnBbg pt-3">Read Story</button>
+           <svg xmlns="http://www.w3.org/2000/svg" width="43" height="14" class="ms-2">
+             <g fill="#fff" fill-rule="evenodd" stroke="#fff"><path d="M0 7h41.864M35.428 1l6 6-6 6"/></g></svg>
+         </div>
+        </div>
+      </div>
+     </div>
     </div>
 
   </section>
