--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
        </div>
        <div class="d-flex flex-column align-items-center justify-content-md-between text-center">
         <p class="mb-2">
-          <button class="secondaryBtnBbg text-uppercase">Get an Invite</button>
+          <button class="secondaryBtnBbg text-uppercase fw-semibold fLink">Get an Invite</button>
           <svg xmlns="http://www.w3.org/2000/svg" width="43" height="14" class="ms-2">
             <g fill="rgba(255, 255, 255, 0.784)" fill-rule="evenodd" stroke="rgba(255, 255, 255, 0.784)"><path d="M0 7h41.864M35.428 1l6 6-6 6"/></g></svg>
           </p>
-          <p class="text-white-50 fLink mb-0 mt-md-5">Copyright 2019. All Rights Reserved</p>
+          <p class="text-white-50 fLink mb-0 mt-md-5 pt-md-4">Copyright 2019. All Rights Reserved</p>
        </div>
     </div>
   </footer>
