init pricing page

--- a/features.html
+++ b/features.html
@@ -194,7 +194,7 @@
           <a href="index.html" class="text-white text-decoration-none text-uppercase pe-2 pb-3 fLink">Home</a>
           <a href="stories.html"  class="text-white text-decoration-none text-uppercase pe-2 pb-3 fLink">Stories</a>
           <a href="features.html"  class="text-white text-decoration-none text-uppercase pe-2 pb-3 fLink">Features</a>
-          <a href="Pricingg.html"  class="text-white text-decoration-none text-uppercase pe-2 pb-3 fLink">Pricing</a>
+          <a href="pricing.html"  class="text-white text-decoration-none text-uppercase pe-2 pb-3 fLink">Pricing</a>
         </div>
        </div>
        <div class="d-flex flex-column align-items-center justify-content-md-between text-center">
