--- a/pricing.html
+++ b/pricing.html
@@ -39,68 +39,28 @@
     </div>
   </nav>
 
-<!-- 
-  Stories
-  Features
-  Pricing
+  <section class="Home bg-black">
+    <div class="row">
+      <div class="col-lg-5 col-md-8 align-self-center homeInfo">
+         <div class="px-md-5 mx-md-5 py-5 py-md-0 px-4 mx-4 position-relative">
+             <h2 class="text-white text-uppercase mb-4">Pricing</h2>
+             <p class="small text-white-50">
+              Create a your stories, Photosnap is a platform for photographers and visual storytellers. It’s the simple way to create and share your photos.
+            </p>
+            </div>
+      </div>
+      <div class="col-lg-7 col-md-4 homeImage">
+        <div>
+          <img src="./assets/pricing/desktop/hero.jpg" alt="hero" class="w-100 imgLarge">
+          <img src="./assets/pricing/tablet/hero.jpg" alt="hero" class="w-100 imgMedium">
+          <img src="./assets/pricing/mobile/hero.jpg" alt="hero" class="w-100 imgSmall">
+        </div>
+     </div>
+    </div>
+    
+  </section>
 
-  Get an invite
 
-  Pricing
-
-  Create a your stories, Photosnap is a platform for photographers and visual storytellers. 
-  It’s the simple way to create and share your photos.
-
-  Monthly
-  Yearly
-
-  Basic
-  Includes basic usage of our platform. Recommended for new and aspiring photographers.
-  $19.00 per month
-  $190.00 per year
-  Pick Plan
-
-  Pro
-  More advanced features available. Recommended for photography veterans and professionals.
-  $39.00 per month
-  $390.00 per year
-  Pick Plan
-
-  Business
-  Additional features available such as more detailed metrics. Recommended for business owners.
-  $99.00 per month
-  $990.00 per year
-  Pick Plan
-
-  Compare
-
-  The Features
-
-  Basic
-  Pro
-  Business
-
-  Unlimited Story Posting
-  Unlimited Photo Upload
-  Embedding Custom Content
-  Customize Metadata
-  Advanced Metrics
-  Photo Downloads
-  Search Engine Indexing
-  Custom Analytics
-
-  We're in Beta. Get your invite today!
-  
-  Get an invite
-
-  Home
-  Stories
-  Features
-  Pricing
-
-  Get an invite
-
-  Copyright 2019. All Rights Reserved -->
   <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
