--- a/pricing.html
+++ b/pricing.html
@@ -59,8 +59,18 @@
     </div>
     
   </section>
+  <div class="switch my-5 d-flex align-items-center justify-content-center">
+    <span class="text-black me-3" id="monthly">Monthly</span>
+    <i class="fa-solid fa-toggle-off fa-2x text-black" id="toggleOff"></i>
+    <i class="fa-solid fa-toggle-on d-none  text-black fa-2x" id="toggleOn"></i>
+    <span class="text-secondary ms-3" id="yearly">Yearly</span>
+
+  </div>
 
 
   <script src="js/bootstrap.bundle.min.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/pricing.js"></script>
+
 </body>
 </html>
