--- a/pricing.html
+++ b/pricing.html
@@ -66,6 +66,73 @@
     <span class="text-secondary ms-3" id="yearly">Yearly</span>
 
   </div>
+  <section class="plans mx-auto">
+       <div class="row g-5">
+        <div class="col-lg-4">
+           <div class="py-5 px-3 plan">
+                <div class="planWidth">
+                  <div class="d-flex flex-column flex-lg-column align-items-lg-center text-lg-center   align-items-center text-center text-md-start flex-md-row justify-content-md-between align-items-md-start">
+                     <div>
+                      <h5 class="mb-3">Basic</h5>
+                      <p class="mb-4 small text-black-50 pWidth">
+                        Includes basic usage of our platform. Recommended for new and aspiring photographers.
+                      </p>
+                     </div>
+                     <div>
+                         <h1>$19.00</h1>
+                         <p class="mb-0 small text-black-50">per month</p>
+                     </div>
+                  </div>
+                  <div class="mt-4 btnWidth">
+                    <button class="mainBtnWbg w-100">PICK PLAN</button>
+                  </div>
+                </div>
+           </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="py-5 px-3 selectedPlan">
+               <div class="planWidth">
+                <div class="d-flex flex-column flex-lg-column align-items-lg-center text-lg-center   align-items-center text-center text-md-start flex-md-row justify-content-md-between align-items-md-start">
+                    <div>
+                     <h5 class="mb-3">Pro</h5>
+                     <p class="mb-4 small text-white-50 pWidth">
+                      More advanced features available. Recommended for photography veterans and professionals.
+                     </p>
+                    </div>
+                    <div>
+                        <h1>$39.00</h1>
+                        <p class="mb-0 small text-white-50">per month</p>
+                    </div>
+                 </div>
+                 <div class="mt-4 btnWitdh">
+                   <button class="mainBtnBbg w-100">PICK PLAN</button>
+                 </div>
+               </div>
+          </div>
+       </div>
+       <div class="col-lg-4">
+        <div class="py-5 px-3 plan">
+             <div class="planWidth">
+              <div class="d-flex flex-column flex-lg-column align-items-lg-center text-lg-center   align-items-center text-center text-md-start flex-md-row justify-content-md-between align-items-md-start">
+                  <div>
+                   <h5 class="mb-3">Business</h5>
+                   <p class="mb-4 small text-black-50 pWidth">
+                    Additional features available such as more detailed metrics. Recommended for business owners.
+                   </p>
+                  </div>
+                  <div>
+                      <h1>$99.00</h1>
+                      <p class="mb-0 small text-black-50">per month</p>
+                  </div>
+               </div>
+               <div class="mt-4 btnWidth">
+                 <button class="mainBtnWbg w-100">PICK PLAN</button>
+               </div>
+             </div>
+        </div>
+       </div>
+       </div>
+  </section>
 
 
   <script src="js/bootstrap.bundle.min.js"></script>
