--- a/pricing.html
+++ b/pricing.html
@@ -38,8 +38,7 @@
       </div>
     </div>
   </nav>
-
-  <section class="Home bg-black">
+  <section class="Home bg-black first">
     <div class="row">
       <div class="col-lg-5 col-md-8 align-self-center homeInfo">
          <div class="px-md-5 mx-md-5 py-5 py-md-0 px-4 mx-4 position-relative">
