--- a/stories.html
+++ b/stories.html
@@ -38,7 +38,7 @@
       </div>
     </div>
   </nav>
-  <section class="Moon bg-black">
+  <section class="Moon bg-black first">
     <div class="row">
    
       <div class="col-lg-5 col-md-7 align-self-center moonInfo">
